# Outfit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  joss_pdf.yml
.husky/hooks/: pre-commit
.opencode/agent/: rust-doc-writer.md  rust-test-writer.md
benches/: gauss_prelim_orbit.rs  iod_batch_diff.rs  load_parquet.rs  outfit_gauss_iod.rs  propagate_universal.rs  solve_kepler_equation.rs
examples/: gauss_iod_once.rs  parquet_to_orbit.rs  run_full_iod.rs  run_full_iod_parallel.rs
joss_data/: outfit_architecture.xml  paper.bib  paper.md
src/: constants.rs  conversion.rs  earth_orientation.rs  env_state.rs  equinoctial_element.rs  gauss.rs  kepler.rs  keplerian_element.rs  keplerian_orbit.rs  lib.rs  obs_dataset.rs  observation_ephemeris.rs  observer_extension.rs  orb_elem.rs  outfit.rs  outfit_errors.rs  ref_system.rs  time.rs  trajectory.rs
src/cache/: mod.rs  observer_centric_cache.rs  observer_fixed_cache.rs
src/differential_orbit_correction/: diff_cor.rs  least_square.rs  mod.rs  obs_dataset_api.rs  obs_fit_data.rs  outlier_rejection.rs  single_iteration.rs
src/ephemeris/: aberration.rs  apparent_position.rs  batch.rs  geometry.rs  mod.rs  observation_ephemeris.rs  request.rs  result.rs  table.rs
src/error_models/: mod.rs  vfcc17.rs
src/error_models/data_models/: vfcc17.rules
src/full_orbit_determination/: mod.rs  obs_dataset_api.rs
src/initial_orbit_determination/: gauss.rs  gauss_result.rs  mod.rs  obs_dataset_api.rs  triplets_selection.rs
src/initial_orbit_determination/triplet_generation/: index_generator.rs  mod.rs
src/jpl_ephem/: download_jpl_file.rs  jpl_ephem_reader.rs  jpl_request.rs  mod.rs
src/jpl_ephem/horizon/: horizon_data.rs  horizon_ids.rs  horizon_reader.rs  horizon_records.rs  horizon_version.rs  interpolation_result.rs  mod.rs
src/jpl_ephem/naif/: daf_header.rs  directory.rs  ephemeris_record.rs  jpl_ephem_header.rs  mod.rs  naif_data.rs  naif_reader.rs  naif_version.rs  summary_record.rs
src/jpl_ephem/naif/naif_ids/: mod.rs  naif_type.rs  planet_bary.rs  planet_mass.rs  satellite_mass.rs  solar_system_bary.rs
src/jpl_ephem/naif_ids/: mod.rs  planet_bary.rs  satellite_mass.rs
src/jpl_ephem/naif_reader/: daf_header.rs  directory.rs  ephemeris_record.rs  jpl_ephem_header.rs  mod.rs  summary_record.rs
src/jpl_request/: earth_pos.rs  jpl_ephem.rs  mod.rs  observer_pos.rs  pos_vector.rs
src/kepler/: angles.rs  brent_dekker_solver.rs  mod.rs  newton_solver.rs  orbit_type.rs  params.rs  preliminary_guess.rs  propagation.rs  solver.rs  stumpff.rs  universal_kepler_solution.rs  velocity.rs
src/kepler/prelim_kepler/: mod.rs  prelim_elliptic.rs  prelim_hyperbolic.rs  prelim_parabolic.rs
src/observations/: ades_reader.rs  display.rs  mod.rs  observation_wrapper.rs  observations.rs  observations_ext.rs  parquet_reader.rs  trajectory_ext.rs  triplets_generator.rs  triplets_iod.rs
src/observers/: bimap.rs  earth_position.rs  mod.rs  observatories.rs  observer_position.rs  observers.rs
src/orbit_type/: cometary_element.rs  equinoctial_element.rs  keplerian_element.rs  mod.rs  uncertainty.rs
src/propagator/: mod.rs  nbody.rs  planet_gm.rs
src/trajectories/: ades_reader.rs  batch_reader.rs  mod.rs  mpc_80col_reader.rs  parquet_reader.rs  progress_bar.rs  trajectory_file.rs  trajectory_fit.rs
tests/: ades_reader_test.rs  outfit_struct_test.rs  reader_80col_test.rs  test_cache_consistency.rs  test_diff_cor.rs  test_ephemeris.rs  test_gauss_iod.rs  test_iod_from_polars.rs  test_orbit_uncertainty_propag.rs  test_read_ades.rs  trajectories_from_parquet.rs  trajectories_from_vec.rs  vec_to_iod.rs
tests/common/: mod.rs
tests/data/: 33803.obs  8467.obs  test_from_fink.parquet  trajectories.parquet
