[package]
name = "outfit"
version = "3.0.0"
edition = "2021"
license-file = "LICENSE"
rust-version = "1.94.0"
description = "Orbit determination toolkit in Rust. Provides astrometric parsing, observer management, and initial orbit determination (Gauss method) with JPL ephemeris support."
readme = "README.md"
repository = "https://github.com/FusRoman/Outfit"
homepage = "https://github.com/FusRoman/Outfit"
documentation = "https://docs.rs/outfit"
keywords = [
    "astronomy",
    "orbit-determination",
    "asteroid",
    "ephemeris",
    "astrometry",
]
categories = ["science", "parsing", "data-structures"]
authors = ["Roman Le Montagner <roman.le-montagner@ijclab.in2p3.fr>"]

[dependencies]

photom = { version = "0.4.0", default-features = false }

aberth = { version = "0.4.1", default-features = false }
ahash = { version = "0.8.11", default-features = false }
camino = { version = "1.1.9", default-features = false }
directories = "6.0.0"
hifitime = { version = "4.2.0", default-features = false, features = [
    "ut1",
    "std",
] }
nalgebra = { version = "0.34.2" }
ordered-float = { version = "5.0.0", default-features = false }
smallvec = { version = "1.14.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
ureq = { version = "3.0.10", default-features = false, features = ["rustls"] }
nom = { version = "8.0.0" }
roots = { version = "0.0.8", default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
    "std_rng",
    "os_rng",
    "small_rng",
] }
rand_distr = { version = "0.5.1", default-features = false }

reqwest = { version = "0.12.15", default-features = false, features = [
    "http2",
    "rustls-tls",
    "stream",
] }
tokio = { version = "1.44.1", default-features = false, features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "io-util",
] }
tokio-stream = { version = "0.1.17", default-features = false }
rayon = { version = "1.12.0", default-features = false, optional = true }
differential-equations = { version = "0.6.1", default-features = false }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }
criterion = { version = "0.5.1", features = ["html_reports"] }
husky-rs = "0.1.5"
proptest = "1.7.0"

photom = { version = "0.4.0", default-features = false, features = [
    "mpc_80_col",
    "polars",
] }
polars = { version = "0.53.0", features = ["is_in"] }

[features]
parallel = ["photom/parallel", "rayon"]

[[example]]
name = "fit_full_iod"
path = "examples/run_full_iod.rs"

[[example]]
name = "fit_full_iod_parallel"
path = "examples/run_full_iod_parallel.rs"
required-features = ["parallel"]

#[profile.test]
#debug = false

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
strip = true

[profile.examples]
inherits = "release"
opt-level = 3
debug = false
lto = "thin"
codegen-units = 16
strip = false

[package.metadata.docs.rs]
features = ["parallel"]
rustdoc-args = ["--cfg", "docsrs"]
